syntax = "proto3";

package stable.tokenfactory.v1;

import "gogoproto/gogo.proto";
import "stable/tokenfactory/v1/blacklisted.proto";
import "stable/tokenfactory/v1/blacklister.proto";
import "stable/tokenfactory/v1/master_minter.proto";
import "stable/tokenfactory/v1/minter_controller.proto";
import "stable/tokenfactory/v1/minters.proto";
import "stable/tokenfactory/v1/minting_denom.proto";
import "stable/tokenfactory/v1/owner.proto";
import "stable/tokenfactory/v1/params.proto";
import "stable/tokenfactory/v1/paused.proto";
import "stable/tokenfactory/v1/pauser.proto";

option go_package = "github.com/noble-assets/noble/v4/x/stabletokenfactory/types";

// GenesisState defines the stabletokenfactory module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Blacklisted blacklistedList = 2 [(gogoproto.nullable) = false];
  Paused paused = 3;
  MasterMinter masterMinter = 4;
  repeated Minters mintersList = 5 [(gogoproto.nullable) = false];
  Pauser pauser = 6;
  Blacklister blacklister = 7;
  Owner owner = 8;
  repeated MinterController minterControllerList = 9 [(gogoproto.nullable) = false];
  MintingDenom mintingDenom = 10;
}
